<resources>
    <string name="app_name">Car illumination wizard</string>
    <string name="action_settings">Settings</string>
    <string name="select_server">Select server</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning!</string>
    <string name="no_paired_devices_found">No paired device found, please pair</string>
    <string name="device_no_bt">Bluetooth not available on device</string>
    <string name="ask_shutdown">Do you really want to shutdown Abraboxabra?</string>
    <string name="send_pairing">Sending pairing command</string>
    <string name="no_devices_on_server">No devices associated to Abraboxabra server</string>
    <string name="select_device_remove">Select remote to remove</string>
    <string name="add_remote">Add remote</string>
    <string name="delete_device">Remove remote</string>
    <string name="shutdown">Shutdown</string>
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more...</string>
    <string name="duration">Duration / Speed:</string>
    <string name="angle">Angle / Position:</string>
    <string name="saturation_value">Saturation / Value:</string>
    <string name="opacity">Opacity:</string>
    <string name="strength_size_thickness">Strength / Size / Thickness:</string>
    <string name="direction_side">Direction / Side:</string>
    <string name="animationType">Animation Type:</string>
    <string-array name="animations_array">
        <item>Multi Strip Light Through</item>
        <item>Strip Light Through</item>
        <item>Light Rotate Around</item>
        <item>Flank Light Pulse</item>
        <item>Light Pulsate</item>
        <item>Point Light Grow Shrink</item>
        <item>Point Light Through</item>
    </string-array>
</resources>
