<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:gravity="center_horizontal"

        >

        <com.larswerkman.holocolorpicker.ColorPicker
            android:id="@+id/picker"
            android:layout_width="250dp"
            android:layout_height="250dp"

            />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturation_value" />

        <com.larswerkman.holocolorpicker.SVBar
            android:id="@+id/svbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/opacity" />

        <com.larswerkman.holocolorpicker.OpacityBar
            android:id="@+id/opacitybar"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strength_size_thickness" />

        <SeekBar
            android:id="@+id/seekSize"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/duration" />

        <SeekBar
            android:id="@+id/seekDuration"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/angle" />

        <SeekBar
            android:id="@+id/seekAngle"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/direction_side" />

        <SeekBar
            android:id="@+id/seekDirection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1.00"
            android:max="1"
            android:progress="0" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/ivStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@android:drawable/presence_busy" />
    <ImageView
        android:id="@+id/ivInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivStatus"
        android:layout_toEndOf="@+id/ivStatus"
        android:src="@android:drawable/ic_menu_info_details" />

    <TextView
        android:id="@+id/tvLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ivInfo"
        android:background="@android:color/white"
        android:gravity="bottom"
        android:maxLines="30"
        android:scrollbars="vertical"
        android:text="LOG WINDOW"
        android:textColor="@android:color/black"
        android:visibility="gone" />
    <TextView
        android:id="@+id/last_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="TextView" />
    </LinearLayout>
</LinearLayout>